--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -42,6 +42,7 @@ runs:
     - uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18
     - uses: docker/setup-buildx-action@f03ac48505955848960e80bbb68046aa35c7b9e7
     - name: Run bin/docker-build-${{ inputs.component }}
+      id: build
       env:
         DOCKER_REGISTRY: ${{ inputs.docker-registry }}
         DOCKER_TARGET: ${{ inputs.docker-target }}
@@ -54,14 +55,6 @@ runs:
         fi
         bin/docker-build-${{ inputs.component }}
 
-    - name: Output Image Digest
-      shell: bash
-      id: image_digest
-      run: |
-        digest=$(docker inspect --format '{{ index .RepoDigests 0 }}' "${{ inputs.docker-registry }}/${{ inputs.component }}:${{ inputs.tag }}")
-        echo "${digest}"
-        echo "digest=${digest}" >> "$GITHUB_OUTPUT"
-
     # Delete older docker images to prevent cache bloat.
     - run: bin/docker-cache-prune
       shell: bash
@@ -72,4 +65,4 @@ outputs:
     value: ${{ inputs.docker-registry }}/${{ inputs.component }}:${{ inputs.tag }}
   digest:
     description: The image digest
-    value: ${{ steps.image_digest.output.digest }}
+    value: ${{ steps.build.output.digest }}
