--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,7 @@ jobs:
         component: ${{ matrix.component }}
         tag: ${{ needs.tag.outputs.tag }}
     - uses: sigstore/cosign-installer@v3
+    - run: echo '${{ steps.build.outputs.digest }}'
     - run: cosign sign '${{ steps.build.outputs.digest }}'
       env:
         COSIGN_YES: true
