--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -42,7 +42,6 @@ runs:
     - uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18
     - uses: docker/setup-buildx-action@f03ac48505955848960e80bbb68046aa35c7b9e7
     - name: Run bin/docker-build-${{ inputs.component }}
-      id: build
       env:
         DOCKER_REGISTRY: ${{ inputs.docker-registry }}
         DOCKER_TARGET: ${{ inputs.docker-target }}
@@ -55,6 +54,14 @@ runs:
         fi
         bin/docker-build-${{ inputs.component }}
 
+    - name: Output Image Digest
+      shell: bash
+      id: image_digest
+      run: |
+        digest=$(cat metadata-${{ inputs.component }} | jq -r '."containerimage.digest"')
+        echo "${digest}"
+        echo "digest=${{ inputs.docker-registry }}/${{ inputs.component }}@${digest}" >> "$GITHUB_OUTPUT"
+
     # Delete older docker images to prevent cache bloat.
     - run: bin/docker-cache-prune
       shell: bash
@@ -65,4 +72,4 @@ outputs:
     value: ${{ inputs.docker-registry }}/${{ inputs.component }}:${{ inputs.tag }}
   digest:
     description: The image digest
-    value: ${{ steps.build.output.digest }}
+    value: ${{ steps.image_digest.output.digest }}
