--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -53,16 +53,14 @@ runs:
           echo "${{ inputs.docker-ghcr-pat }}" | docker login ghcr.io -u "${{ inputs.docker-ghcr-username }}" --password-stdin
         fi
         bin/docker-build-${{ inputs.component }}
-        ls -la
-        ls -la bin/
 
     - name: Output Image Digest
       shell: bash
       id: image_digest
       run: |
-        digest=$(cat metadata-${{ inputs.component }}.json | jq -r '."containerimage.digest"')
-        echo "${digest}"
-        echo "digest=${{ inputs.docker-registry }}/${{ inputs.component }}@${digest}" >> "$GITHUB_OUTPUT"
+        image_digest=$(cat metadata-${{ inputs.component }}.json | jq -r '."containerimage.digest"')
+        echo "${image_digest}"
+        echo "DIGEST=${{ inputs.docker-registry }}/${{ inputs.component }}@${image_digest}" >> "$GITHUB_OUTPUT"
 
     # Delete older docker images to prevent cache bloat.
     - run: bin/docker-cache-prune
@@ -74,4 +72,4 @@ outputs:
     value: ${{ inputs.docker-registry }}/${{ inputs.component }}:${{ inputs.tag }}
   digest:
     description: The image digest
-    value: ${{ steps.image_digest.output.digest }}
+    value: ${{ steps.image_digest.outputs.DIGEST }}
